--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -477,4 +477,7 @@
   <data name="terminal_intro_4" xml:space="preserve">
     <value>The task ends at the taco place.</value>
   </data>
+  <data name="terminal_intro_5" xml:space="preserve">
+    <value>You will drive agile this buggy.</value>
+  </data>
 </root>
