update resource strings

--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -190,7 +190,7 @@
     <value>Sie haben jetzt 10min. Zeit sich mit dem Spiel vertraut zu machen.</value>
   </data>
   <data name="intro22" xml:space="preserve">
-    <value>Sie können überall hin fahren.</value>
+    <value>Sie können das Straßennetz erkunden.</value>
   </data>
   <data name="intro23" xml:space="preserve">
     <value>Um sofort zu beginnen, fahren Sie entlang der Kontrollpunkte.</value>
