--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -190,7 +190,7 @@
     <value>You now have 10min. to get familiar with the game.</value>
   </data>
   <data name="intro22" xml:space="preserve">
-    <value>You can drive wherever you want.</value>
+    <value>You can explore the street network</value>
   </data>
   <data name="intro23" xml:space="preserve">
     <value>To start immediately, drive through the checkpoints.</value>
