--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -333,4 +333,7 @@
   <data name="terminal_intro_5" xml:space="preserve">
     <value>Sie fahren diesen wendigen Buggy.</value>
   </data>
+  <data name="intro24" xml:space="preserve">
+    <value>Drücken Sie den gelben Knopf, um in das Fahrzeug einzusteigen.</value>
+  </data>
 </root>
