--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -333,6 +333,12 @@
   <data name="terminal_intro_5" xml:space="preserve">
     <value>Sie fahren diesen wendigen Buggy.</value>
   </data>
+  <data name="intro23_1" xml:space="preserve">
+    <value>Drücken Sie den gelben Knopf, um einen Charakter auszuwählen.</value>
+  </data>
+  <data name="intro23_2" xml:space="preserve">
+    <value>Drehen Sie das Lenkrad, um den Charakter zu wechseln.</value>
+  </data>
   <data name="intro24" xml:space="preserve">
     <value>Drücken Sie den gelben Knopf, um in das Fahrzeug einzusteigen.</value>
   </data>
