--- a/ClassLibrary1/Properties/Resources.de-DE.resx
+++ b/ClassLibrary1/Properties/Resources.de-DE.resx
@@ -295,7 +295,7 @@
     <value>Das Auto ist schneller, als es aussieht.</value>
   </data>
   <data name="intro_5_1" xml:space="preserve">
-    <value>Die Aufgabe dauern etwa zwischen 1 und 3min.</value>
+    <value>Die Aufgaben dauern etwa zwischen 1 und 3min.</value>
   </data>
   <data name="intro7_1" xml:space="preserve">
     <value>Jede Aufgabe beinhaltet eine Entscheidungssituation.</value>
