--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -490,7 +490,7 @@
     <value>The task ends at the taco place.</value>
   </data>
   <data name="terminal_intro_5" xml:space="preserve">
-    <value>You will drive agile this buggy.</value>
+    <value>You will drive this agile buggy.</value>
   </data>
   <data name="intro23_1" xml:space="preserve">
     <value>Press the yellow button to select a character.</value>
