--- a/ClassLibrary1/Properties/Resources.resx
+++ b/ClassLibrary1/Properties/Resources.resx
@@ -528,4 +528,7 @@
   <data name="times_backwards" xml:space="preserve">
     <value>How many times did the player drive backwards?</value>
   </data>
+  <data name="intro_char_selected" xml:space="preserve">
+    <value>0 = Michael, 1 = Franklin, 2 = Trevor</value>
+  </data>
 </root>
